# ckanext-iam4nfdi

./: CHANGELOG.md  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py
ckanext/iam4nfdi/: oauth2.py  plugin.py  views.py
ckanext/iam4nfdi/fanstatic/: webassets.yml
ckanext/iam4nfdi/fanstatic/css/: iam4nfdi.css  org-sel.css
ckanext/iam4nfdi/fanstatic/js/: iam4nfdi.js  org-sel.js
ckanext/iam4nfdi/i18n/: ckanext-iam4nfdi.pot
ckanext/iam4nfdi/i18n/de/LC_MESSAGES/: ckanext-iam4nfdi.mo  ckanext-iam4nfdi.po
ckanext/iam4nfdi/templates/: organization_selection.html
ckanext/iam4nfdi/templates/user/: login.html  read_base.html
