[metadata]
name = ckanext-iam4nfdi
version = 0.1.0
url = https://github.com/SDM-TIB/ckanext-iam4nfdi
author = Philipp D. Rohde
author_email = philipp.rohde@tib.eu
description = A CKAN extension allowing to authenticate with the IAM4nfdi application RegApp via OpenID Connect.
long_description = file: README.md
keywords = CKAN IAM NFDI OpenID OIDC
license = AGPL
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = True
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    contrib
    docs
    tests*

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/iam4nfdi/i18n/ckanext-iam4nfdi.pot
width = 80

[init_catalog]
domain = ckanext-iam4nfdi
input_file = ckanext/iam4nfdi/i18n/ckanext-iam4nfdi.pot
output_dir = ckanext/iam4nfdi/i18n

[update_catalog]
domain = ckanext-iam4nfdi
input_file = ckanext/iam4nfdi/i18n/ckanext-iam4nfdi.pot
output_dir = ckanext/iam4nfdi/i18n
previous = true

[compile_catalog]
domain = ckanext-iam4nfdi
directory = ckanext/iam4nfdi/i18n
statistics = true
